# ESC

./: README.md
Differentsialförstärkare/Differentsialförstärkare/: Differentsialförstärkare.kicad_pcb  Differentsialförstärkare.kicad_prl  Differentsialförstärkare.kicad_pro  Differentsialförstärkare.kicad_sch  R_m_schematic_Library.bak  fp-info-cache  fp-lib-table  sym-lib-table  ~_autosave-Differentsialförstärkare.kicad_pcb.lck
Differentsialförstärkare/Differentsialförstärkare/R_m.pretty/: R_m.kicad_mod
ESC_Texas/: #auto_saved_files#  Battery-Current.kicad_sch  Driver_1.kicad_sch  Driver_A_sch.kicad_sch  Driver_subsheet.kicad_sch  ESC_Texas.kicad_pcb  ESC_Texas.kicad_prl  ESC_Texas.kicad_pro  ESC_Texas.kicad_sch  Phase_subsheet.kicad_sch  _autosave-ESC_Texas.kicad_pcb  fp-info-cache  fp-lib-table  sym-lib-table  ~ESC_Texas.kicad_pcb.lck  ~ESC_Texas.kicad_sch.lck  ~_autosave-ESC_Texas.kicad_pcb.lck
ESC_Texas/KiCad-Footprints/0475901001/: 0475901001.kicad_sym  475901001.stp  MOLEX_0475901001.kicad_mod
ESC_Texas/KiCad-Footprints/222AMVBAR/: 2024-11-13_14-35-25.kicad_sym  SO4_222A-M-V-B_CTS.kicad_mod
ESC_Texas/bom/: ibom.html
KiCad-Footprints/BAS316Z/: SOD323_F_.kicad_mod
KiCad-Footprints/IPD100N06S4-03/: IPD100N06S4-03.step  TRANS_BTS3060TFATMA1.kicad_mod
KiCad-Footprints/LIB_UCC21331CQDRQ1/: UCC21331CQDRQ1.dcm  UCC21331CQDRQ1.kicad_sym  UCC21331CQDRQ1.stp
KiCad-Footprints/MP-K78U15-500R3L/: MP-K78U15-500R3L.lib  MP-K78U15-500R3L.mod
Matlab/: LED_resistor.asv  LED_resistor.m
bsp/: Cargo.toml  README.md
bsp/src/: constants.rs  events.rs  lib.rs
(+116 files in other folders)
